
===========================================================================
MARK: released gwenhywfar-0.9.9 (2004/04/08)
===========================================================================


2004/04/08: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- io/bufferedio: 
  - added flag functions to set/get flags which control the behaviour of a 
    BufferedIO
  - split into multiple object files for the different supported BufferedIOs
  - now the GWEN_BUFFEREDIO type is opaque, its strcuture is no longer
    exported to the supported BufferedIOs
  - now uses the inherit module
  The changes above now allow for new BufferedIOs to be created outside Gwen.


2004/04/06: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- os/process:
  - added functions to set/retrieve flags to modify the behaviour of the 
    GWEN_PROCESS code.
    The most important (and for now the only) flags are:
    - GWEN_PROCESS_FLAGS_REDIR_STDIN
    - GWEN_PROCESS_FLAGS_REDIR_STDOUT
    - GWEN_PROCESS_FLAGS_REDIR_STDERR
    These flags make Gwen redirect the corresponding std stream so that the
    calling process may intercept the input/output of the started process.
  - added functions which return a GWEN_BUFFEREDIO which can be used to
    read/write from/to redirected child streams.


2004/04/05: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added base/idlist: This is basically a list for GWEN_TYPE_UINT32 objects,
  but since it uses tables instead of those list objects normally used
  throughout Gwen it is less memory consuming. I used it in the current
  development version of Libchipcard and found it usefull in another project
  so I decided to move it to Gwen.
- parser/db:
  - added functions GWEN_DB_FindFirstGroup and GWEN_DB_FindFirstGroup which
    simplify searching for groups by name.
- base/idlist:
  - added function GWEN_IdList_Clean() to clean a list